testsuite/bsc.bugs/github/gh353/Bug353_Pat_BSV.bsv.bsc-out.expected
checking package dependencies
compiling Bug353_Pat_BSV.bsv
Error: "Bug353_Pat_BSV.bsv", line 16, column 12: (T0020)
  Type error at:
    tagged Foo {(Bug353_Type::Foo_$Foo { f1 = x; f2 = y; })}

  Expected type:
    Bug353_Pat_BSV::Foo

  Inferred type:
    Bug353_Type::Foo#(a__, b__)

